session User routes

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>project-2</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <%# <link rel="stylesheet" href="/css/style.css">%>
+    <% include ./partials/stylesheets %>
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body>
+    <% include ./partials/navbar %>
     <% for(const type in messages) { %>
       <div class="<%= type %>">
         <h5><%= messages[type] %></h5>
