--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,1 +1,26 @@
-<h1>project-2</h1>
+<h1>Get Stuffed</h1>
+
+<form class ="register" method="POST" action="/register">
+  <div>
+    <%# <label for="username">Username</label>%>
+    <input type="text" name="username" id="username" placeholder="Username">
+  </div>
+  <div>
+    <%# <label for="email">Email</label>%>
+    <input type="email" name="email" id="email" placeholder="Email">
+  </div>
+  <div>
+    <%# <label for="password">Password</label>%>
+    <input type="password" name="password" id="password" placeholder="Password">
+  </div>
+  <div>
+    <%# <label for="passwordConfirmation">Password Confirmation</label>%>
+    <input type="password" name="passwordConfirmation" id="passwordConfirmation" placeholder="Password Confirmation">
+  </div>
+
+  <button>Register</button>
+</form>
+
+<form method="GET" action="/login">
+  <button>Login</button>
+</form>
