--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,13 @@
 <nav class="">
     <ul class="">
       <li class="">
-        <a class="" href="/logout">Username</a>
+        <a class="" href="/user/<%= user.id %>">Username</a>
       </li>
       <li class="">
-        <a class="" href="/logout">Search Bar</a>
+        <a class="" href="/images">Discover</a>
+      </li>
+      <li class="">
+        <a class="" href="/#">Search Bar</a>
       </li>
       <li class="">
         <a class="" href="/logout">Logout</a>
