edit user routes

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="">
     <ul class="">
       <li class="">
-        <a class="" href="/user/<%= user.id %>">Username</a>
+        <a class="" href="/user/<%= user.id %>"><%= user.username %></a>
       </li>
       <li class="">
         <a class="" href="/images">Discover</a>
