--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,5 @@
 
-
-<footer>
+<nav>
   <ul class="">
     <li class="">
       <a class="" href="#">About</a>
@@ -12,4 +11,4 @@
       <a class="" href="#"> Contact</a>
     </li>
   </ul>
-</footer>
+</nav>
