--- a/views/images/new.ejs
+++ b/views/images/new.ejs
@@ -1,4 +1,4 @@
-<form method="POST" action="/images" enctype="multipart/form-data">
+<form method="POST" action="/images/new" enctype="multipart/form-data">
   <div>
     <label for="filename">Image file</label>
     <input type="file" name="filename" id="filename">
