--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>project-2</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body>
