--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,24 +1,39 @@
 <nav class="">
     <ul class="">
 
+      <li class="navLink">
+        <a class="" href="/">Discover</a>
+      </li>
+
+      <li class="">
+        <form class="" action="/images" method="GET">
+          <input class="search" type="text" name="ingredients" placeholder="Search">
+        </form>
+      </li>
+
+
       <% if(locals.isAuthenticated) { %>
+
         <li class="">
-            <a class="" href="/users/<%= user.id %>"><%= user.username %></a>
-        </li>
-        <li class="">
-          <a class="" href="/images">Discover</a>
+            <a class="" href="/users/<%= user.id %>"> Profile </a>
         </li>
 
         <li class="">
           <a class="" href="/logout">Logout</a>
         </li>
 
+      <% } else {%>
+
+
         <li class="">
-          <form class="" action="/images" method="GET">
-            <input class="search" type="text" name="ingredients" placeholder="Search..">
-          </form>
+          <a class="" href="/register">Join</a>
+        </li>
+
+        <li class="">
+          <a class="" href="/login">Login</a>
         </li>
 
       <% } %>
+
     </ul>
 </nav>
