--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,6 +13,54 @@ html { overflow-y: scroll; }
 
 body {
   //padding: 25px;
+   //background-color: rgb(210,50,98);
+   background: rgba(33, 33, 51, 0.9);
+   transition: all 0.8s ease-in-out;
+}
+
+
+
+.home {
+  color: white;
+  transition: all 0.8s ease-in-out;
+}
+h3.home {
+  margin-top: 30px;
+  opacity: 0.8;
+  transition: all 0.8s ease-in-out;
+ }
+
+.changeColor {
+   background: white;
+   color: black;
+   //margin-bottom: 60px;
+}
+
+h5 {
+  transition: all 1.2s ease-in-out;
+  font-size: 13px;
+  opacity: 0;
+  text-transform: uppercase;
+  margin-top:10px;
+}
+h5.madeBy {
+  margin-top:100px;
+  //color: -webkit-linear-gradient(left,#35d6d1 30%,#ecff28 70%) no-repeat;
+  background: -webkit-linear-gradient(left,#35d6d1 30%,#ecff28 70%) no-repeat;
+  -webkit-background-clip: text;
+  color: #b4f25f;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 400px ;
+  opacity: 1;
+}
+header.opacity {
+  opacity:0.8;
+}
+.changeColorH2 {
+  color: rgba(33, 33, 51, 1);
+}
+.changeColorH3 {
+  color: rgba(33, 33, 51, 1);
 }
 
 form, input, button {
@@ -21,6 +69,7 @@ form, input, button {
 
 main {
   min-height: calc(100vh - 200px);
+  margin-top: 100px;
   overflow: hidden;
   text-align: center;
 }
@@ -31,20 +80,24 @@ footer, header {
   left:0;
   right: 0;
   top: 0;
-  height: 140px;
-  background: grey;
+  height: 100px;
+  //background: rgba(33, 33, 51, 0.9);
+  background: white;
+  opacity:0.92;
+  transition: opacity 0.8 ease-in-out;
+  //border-bottom: 6px solid rgba(33, 33, 51, 0.4);
   ul {
     position: relative;
     text-align: center;
     //text-align: left;
     position: relative;
-    top:40px;
+    top:30px;
     height: 40px;
     //line-height: 20px;
-    background: white;
+    //background: white;
     list-style: none;
     display: block;
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
     li:first-child {
       float:left;
@@ -64,6 +117,23 @@ footer, header {
       text-transform: uppercase;
       font-weight:bolder;
       font-style: bold;
+      &.joinLink {
+      //   background: -webkit-linear-gradient(100deg,#3626A7 30%,#84DCC6 70%) no-repeat;
+      //   -webkit-background-clip: text;
+      //   color: #b4f25f;
+      //   -webkit-text-fill-color: transparent;
+      //   margin-bottom: 400px ;
+      //   opacity: 1;
+        a {
+          background: #84dcc6;
+          border-radius: 10px;
+          color:white;
+            &:hover {
+              color:#84dcc6;
+            }
+          }
+       }
+
 
       a {
         margin-top: 0;
@@ -76,11 +146,26 @@ footer, header {
         // height: 50px;
         // background: yellow;
         &:hover {
-          color:dodgerblue
+          color:#84dcc6;
         }
+
+
+
       }
     }
   }
+}
+
+footer {
+  margin-top: 100px;
+  height: 350px;
+  background: rgba(33, 33, 51, 0.9);
+  color:white;
+}
+
+header {
+  position: fixed;
+  z-index: 1000;
 }
 
 input[type=text].search {
@@ -118,10 +203,8 @@ input[type=text].search {
   }
 }
 
-
-
 h2 {
-  margin: 60px 0 10px 0;
+  margin: 100px 0 10px 0;
   font-size: 28px;
   color: black;
 }
@@ -165,21 +248,73 @@ form.sessionForm {
       cursor: pointer;
     }
   }
+
+  div.addImage {
+    margin-top: 10px;
+    label {
+      border-radius: 24px;
+      width: 100%;
+      font-size: 14px;
+      margin-top: 100px;
+      font-weight: 600;
+      border: 1px solid #D6EDFF;
+      background: #D6EDFF;
+      display: inline-block;
+      padding: 10px 0px;
+      text-align: center;
+      cursor: pointer;
+      color:black;
+
+      &:hover{
+        opacity: 0.8;
+      }
+    }
+    input[type="file"] {
+    display: none;
+}
+    textarea {
+      background: ghostwhite;
+      font-size: 13px;
+      border: 1px solid #dbdbdb;
+      border-radius: 20px;
+      text-align: center;
+      // padding-left: 10px;
+      padding-top: 10px;
+      width:100%;
+      height: 40px;
+      resize: none;
+      margin-bottom: 10px;
+      &::-webkit-input-placeholder {
+        color:    grey;
+        font-size: 14px;
+      }
+      &:focus {
+        background: white;
+        //border: 1px solid black;
+      }
+    }
+  }
 }
 
 a.sessionLink {
+  margin-top: 40px;
   color: white;
   font-weight: bold;
-  background: tomato;
+  background: #84dcc6;
   display:block;
   width: 500px;
   margin: 10px auto;
   line-height: 40px;
   font-size: 14px;
   border-radius: 24px;
-  border: 1px solid tomato;
+  border: 1px solid #84dcc6;
   &:hover {
-    opacity: 0.9;
+    opacity: 0.8;
+  }
+  &.edit {
+    background: ghostwhite;
+    border: 1px solid ghostwhite;
+    color: #cec8c8;
   }
 }
 
@@ -231,9 +366,18 @@ p.otherSession {
   }
 }
 
+
+
+
+//grid
+
+//-------------------------------------------------------------------------
+
+
 .grid {
   margin-top: 50px;
-  background: ghostwhite;
+  //background: ghostwhite;
+  padding-left: 0.66%;
   &:after {
   content: '';
   display: block;
@@ -244,6 +388,7 @@ p.otherSession {
 .grid-sizer {
   width: 33.333%;
   background:red;
+
 }
 .grid-item {
   float: left;
@@ -272,6 +417,7 @@ p.otherSession {
       opacity: 0;
       width: 150px;
       padding: 8px 9px;
+      font-weight: 600;
       //height: 10px;
       //border: 1px solid white;
       border-radius: 10px;
@@ -315,26 +461,30 @@ h1 {
 
 
 form.delete {
+  position: absolute;
   z-index: 2;
-  margin-top: -25px;
-  margin-right: -65px;
+  top: 10px;
+  left: 10px;
+  //margin-top: -25px;
+  //margin-right: -65px;
   button {
-    background:none;
-    opacity: 0.7;
+    border-radius: 4px;
+    background:white;
+    opacity: 0.5;
     border: none;
     height:35px;
     width:35px;
     transition: all .07s ease-in-out;
     div {
-    background: white;
+    background: rgb(132, 220, 198);
     height: 35px;
     position: relative;
     width: 4px;
-    left: 10px;
-    top: -2px;
+    left: 15px;
+    top: 0px;
     transform: rotate(45deg);
       &:after {
-      background: white;
+      background: rgb(132, 220, 198);
       content: "";
       height: 4px;
       left: -16px;
@@ -344,9 +494,10 @@ form.delete {
       }
     }
     &:hover {
-      background: none;
+      //background: none;
       opacity: 1;
       color: black;
+      cursor: pointer;
     }
   }
 }
@@ -357,7 +508,7 @@ form.delete {
   display: block;
   width: 90%;
   margin: 0 auto;
-  background: ghostwhite;
+  //background: ghostwhite;
   overflow: visible;
   padding-bottom: 100px;
   padding-top: 000px;
@@ -365,39 +516,6 @@ form.delete {
     font-size: 20px;
     color: black;
   }
-}
-
-.profile-image {
-  float: left;
-  padding: 0;
-  background: grey;
-  position: relative;
-  display: inline-block;
-  width: calc( ((100vw - 50px) / 2) - 1vw );
-  height: calc( ((100vw - 50px) / 2) - 1vw );
-  margin:  0.5vw ;
-  overflow: hidden;
-    a {
-        img{
-        margin: 0 auto;
-        display: block;
-        height: 100%;
-        opacity: 0.9;
-        transition: all .2s ease-in-out;
-
-        &:hover {
-          transform: scale(1.01);
-          opacity: 0.95;
-        }
-    }
-  }
-}
-.small {
-
-  width: calc( ((100vw - 50px) / 4) - 1vw );
-  height: calc( ((100vw - 50px) / 4) - 1vw );
-  margin:  0.5vw ;
-  overflow: hidden;
 }
 
 
