--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,13 @@
       <% } %>
 
       <%- body %>
+      <%# <div class="bottom-panel">
+
+      </div>
+      <div class="really-bottom-panel">
+
+      </div>%>
+
 
     </main>
 
