--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,6 +1,8 @@
-<h2>Lazy Recipes</h2>
+<h2 class="home">Lazy Recipes</h2>
+<h3 class="home"><br> Upload an image and let Lazy Recipes, find you a dish using image recognition technology. <br><br> You still have to cook it though...  you lazy bugger.     </h3>
 
 
+<h5>Made with &hearts; by Roman at GA London 2017</h5>
 <div class="feed">
 
 
