--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,7 +25,7 @@
       <% } else {%>
 
 
-        <li class="">
+        <li class="joinLink">
           <a class="" href="/register">Join</a>
         </li>
 
