--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,4 +1,8 @@
 <h2 class="home">Lazy Recipes</h2>
+<div class="logo">
+  <img src="https://vectr.com/tmp/b3qyZo5E7/bGJMtoV6p.png?width=100&height=100&select=bGJMtoV6ppage0" alt="logo">
+</div>
+
 <h3 class="home"><br> Upload an image and let Lazy Recipes, find you a dish using image recognition technology. <br><br> You still have to cook it though...  you lazy bugger.     </h3>
 
 
