--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -76,6 +76,9 @@ h3.home {
    color: black;
    //margin-bottom: 60px;
 }
+a.sessionLink.upload {
+  margin-top: 60px;
+}
 
 h5 {
   transition: all 1.2s ease-in-out;
