--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,14 +1,16 @@
-<h2 class="home">Lazy Recipes</h2>
-<div class="logo">
+<%# <div class="logo">
   <img src="https://vectr.com/tmp/b3qyZo5E7/bGJMtoV6p.png?width=100&height=100&select=bGJMtoV6ppage0" alt="logo">
-</div>
+</div>%>
 
-<h3 class="home"><br> Upload an image and let Lazy Recipes, find you a dish using image recognition technology. <br><br> You still have to cook it though...  you lazy bugger.     </h3>
+<section class="landing-page">
+  <h2>Lazy Recipes</h2>
+  <h3><br> Upload an image and let Lazy Recipes, find you a dish using image recognition technology. <br><br> You still have to cook it though...  you lazy bugger. </h3>
+
+  <h5>Made with &hearts; by Roman at GA London 2017</h5>
+</section>
 
 
-<h5>Made with &hearts; by Roman at GA London 2017</h5>
 <div class="feed">
-
 
   <div class="grid">
     <div class="grid-sizer"></div>
