--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -12,99 +12,51 @@
 html { overflow-y: scroll; }
 
 body {
-  //padding: 25px;
-   //background-color: rgb(210,50,98);
-   background: rgba(33, 33, 51, 0.9);
-   transition: all 0.8s ease-in-out;
-}
-h2.h2user {
-  margin-top: 60px;
+  //  background: rgba(33, 33, 51, 0.9);
 }
 
-div.recipeWrap {
-  h3 {
-    margin-top: 10px;
-    font-size: 20px;
-    color: black;
-    margin-top: 25px;
-    border-top: 3px solid black;
-  }
-  h4 {
-    margin-top: 0px;
-    margin-bottom: 15px;
-    font-size: 14px;
-    color: dodgerblue;
-  }
+h2 {
+  margin: 140px 0 10px 0;
+  font-size: 28px;
+  color: black;
+}
+h3 {
+  margin: 0px 0 30px 0;
+  font-size: 18px;
+  color: black;
 }
 
-div.logo{
-  position: relative;
-  display: block;
-  margin-top: -40px;
-  margin: 0 auto;
-  //height: 34px;
-  width: 34px;
-  //background: grey;
 
-  img {
-    position: absolute;
-    margin-top: -88px;
-    //right: 11px;
-    display: block;
-    height: 34px;
-    width: 90%;
-    transition: all 0.2s ease-in-out;
-    &:hover {
-        margin-top: -90px;
-        transform: rotate(-180deg);
-    }
-  }
-}
-
-.home {
-  color: white;
-  transition: all 0.8s ease-in-out;
-}
-h3.home {
-  margin-top: 30px;
-  opacity: 0.8;
-  transition: all 0.8s ease-in-out;
- }
-
-.changeColor {
-   background: white;
-   color: black;
-   //margin-bottom: 60px;
-}
 a.sessionLink.upload {
   margin-top: 60px;
 }
 
-h5 {
-  transition: all 1.2s ease-in-out;
-  font-size: 13px;
-  opacity: 0;
-  text-transform: uppercase;
-  margin-top:10px;
+
+section.landing-page {
+  h2 {
+    margin-top: 50px;
+    font-size: 40px;
+  }
+  h3 {
+    margin-top: 30px;
+  }
+  h5 {
+    transition: all 1.2s ease-in-out;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-top:80px;
+    //color: -webkit-linear-gradient(left,#35d6d1 30%,#ecff28 70%) no-repeat;
+    background: -webkit-linear-gradient(left,#35d6d1 30%,#ecff28 70%) no-repeat;
+    -webkit-background-clip: text;
+    color: #b4f25f;
+    -webkit-text-fill-color: transparent;
+    // margin-bottom: 30vh ;
+    opacity: 1;
+  }
 }
-h5.madeBy {
-  margin-top:100px;
-  //color: -webkit-linear-gradient(left,#35d6d1 30%,#ecff28 70%) no-repeat;
-  background: -webkit-linear-gradient(left,#35d6d1 30%,#ecff28 70%) no-repeat;
-  -webkit-background-clip: text;
-  color: #b4f25f;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 50vh ;
-  opacity: 1;
-}
+
 header.opacity {
   opacity:0.8;
-}
-.changeColorH2 {
-  color: rgba(33, 33, 51, 1);
-}
-.changeColorH3 {
-  color: rgba(33, 33, 51, 1);
 }
 
 form, input, button {
@@ -173,6 +125,7 @@ footer, header {
           border-radius: 10px;
           color:white;
             &:hover {
+              background: white;
               color:#84dcc6;
             }
           }
@@ -201,9 +154,9 @@ footer, header {
 }
 
 footer {
-  margin-top: 100px;
-  height: 350px;
-  background: rgba(33, 33, 51, 0.9);
+  margin-top: 0px;
+  height: 150px;
+  background: rgba(33, 33, 51, 1);
   color:white;
 }
 
@@ -245,17 +198,6 @@ input[type=text].search {
       padding-top: 1px;
       padding-left: 26px;
   }
-}
-
-h2 {
-  margin: 140px 0 10px 0;
-  font-size: 28px;
-  color: black;
-}
-h3 {
-  margin: 0px 0 30px 0;
-  font-size: 18px;
-  color: black;
 }
 
 form.sessionForm {
@@ -555,28 +497,154 @@ form.delete {
   //background: ghostwhite;
   overflow: visible;
   padding-bottom: 100px;
-  padding-top: 000px;
+  padding-top: 70px;
   p {
     font-size: 20px;
     color: black;
   }
 }
 
-
-//
-// .grow { transition: all .2s ease-in-out; }
-// .grow:hover { transform: scale(1.1); }
-
-.recipe-image {
+//// ------------ SHOW PAGE -----------
+section.recipe-image {
   margin: 0 auto;
+  margin-top: -30px;
+  margin-bottom: 300px;
   position: relative;
-  display: inline-block;
-  height: 450px;
-  overflow: hidden;
-  margin: 0 15px;
-    img {
-    margin: 0 auto;
-    display: block;
+  display:block;
+  width: 70%;
+  height: 100%;
+  overflow: visible;
+  background: green;
+  clear: both;
+  div.image {
+    position: relative;
+    width: auto;
     height: 100%;
+    display: block;
+    border-radius: 15px;
+    // overflow: hidden;
+    background: blue;
+    margin: 0 auto;
+    img {
+      margin: 0 auto;
+      display: block;
+      width: auto;
+      max-width:  100%;
+      height: 100%;
+      max-height: 500px;
+    }
+  }
+  div.text {
+    position: relative;
+    background: red;
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin-left: 0%;
+    border-radius: 10px;
+    h5 {
+      position: relative;
+      font-size: 22px;
+      width: 50%;
+      line-height: 100px;
+      background: ghostwhite;
+      float: left;
+      text-align: right;
+      padding-right: 10px;
+      }
+    p {
+      padding-left: 10px;
+      padding-top: 3px;
+      background: ghostwhite;
+      position: relative;
+      font-size: 16px;
+      line-height: 100px;
+      width: 50%;
+      float: right;
+      text-align: left;
+      // width: 100%;
+      // height: 100%;
+    }
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+section.returned-recipes {
+  border-radius: 10px;
+  position: relative;
+  display:table;
+  background: ghostwhite;
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+  clear: both;
+  overflow: hidden;
+
+  div.text {
+    display: table-cell;
+    vertical-align: middle;
+    width: 65%;
+    height: 100%;
+
+    // float: left;
+    overflow: hidden;
+    position: relative;
+    // transform: translateY(-50%);
+    p {
+      font-size: 14px;
+      line-height: 30px;
+      color: black;
+      a {
+        font-size: 14px;
+        color: blue;
+        &:hover {
+          opacity: 0.5;
+        }
+      }
+    }
+    p:first-child {
+      line-height: 40px;
+      font-size: 16px;
+      font-weight: 600;
+    }
+  }
+  div.image {
+    display:inline-block;
+    width: 100%;
+    float: right;
+    img {
+      border-radius: 10px;
+      display:block;
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+//<img src="<%= image.src %>" alt="<%= image.caption %>">
+
+
+// <section class="recipe-image">
+//   <div class="image">
+//   </div>
+//   <div class="text">
+//     <h5>Ingredients</h5>
+//     <p>
+//       <% image.ingredients.forEach((ingredient) => { %>
+//          <br> <%= ingredient %>
+//       <% }) %>
+//     </p>
+//   </div>
+// </section>
+
+// <p><%= recipe.title %> </p>
+//  <p> By: <%= recipe.publisher %></p>
+// <p><a href="<%= recipe.image_url %>">Link To Recipe </a> </p
