--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -508,22 +508,19 @@ form.delete {
 section.recipe-image {
   margin: 0 auto;
   margin-top: -30px;
-  margin-bottom: 300px;
+  margin-bottom: 50px;
   position: relative;
   display:block;
   width: 70%;
   height: 100%;
   overflow: visible;
-  background: green;
   clear: both;
   div.image {
     position: relative;
     width: auto;
     height: 100%;
     display: block;
-    border-radius: 15px;
     // overflow: hidden;
-    background: blue;
     margin: 0 auto;
     img {
       margin: 0 auto;
@@ -532,44 +529,41 @@ section.recipe-image {
       max-width:  100%;
       height: 100%;
       max-height: 500px;
+      border-radius: 15px;
     }
   }
   div.text {
     position: relative;
-    background: red;
     height: 100%;
     width: 100%;
     display: block;
     margin-left: 0%;
     border-radius: 10px;
-    h5 {
-      position: relative;
-      font-size: 22px;
-      width: 50%;
-      line-height: 100px;
-      background: ghostwhite;
-      float: left;
-      text-align: right;
-      padding-right: 10px;
-      }
+
     p {
-      padding-left: 10px;
-      padding-top: 3px;
+      span {
+        font-weight: 600;
+        font-size: 16px;
+      }
+      margin: 0 auto;
       background: ghostwhite;
       position: relative;
       font-size: 16px;
       line-height: 100px;
-      width: 50%;
-      float: right;
-      text-align: left;
-      // width: 100%;
-      // height: 100%;
+      width: 100%;
+      margin-top: 10px;
+      border-radius: 15px;
     }
   }
 }
 
 
-
+h5.showpage {
+  font-size: 22px;
+  padding: 10px;
+  text-align: left;
+  margin: 20px 0;
+}
 
 
 
