--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,15 +5,10 @@
   border: none;
   text-decoration: none;
   font-family: 'Raleway', sans-serif;
-  font-size: 0;
   outline: none;
 }
 
 html { overflow-y: scroll; }
-
-body {
-  //  background: rgba(33, 33, 51, 0.9);
-}
 
 h2 {
   margin: 140px 0 10px 0;
@@ -21,7 +16,7 @@ h2 {
   color: black;
 }
 h3 {
-  margin: 0px 0 30px 0;
+  margin: 0px 0 0px 0;
   font-size: 18px;
   color: black;
 }
@@ -34,7 +29,7 @@ a.sessionLink.upload {
 
 section.landing-page {
   h2 {
-    margin-top: 50px;
+    margin-top: 100px;
     font-size: 40px;
   }
   h3 {
@@ -55,17 +50,13 @@ section.landing-page {
   }
 }
 
-header.opacity {
-  opacity:0.8;
-}
-
 form, input, button {
   font-size: 12px;
 }
 
 main {
   min-height: calc(100vh - 200px);
-  margin-top: 100px;
+  margin-top: 50px;
   overflow: hidden;
   text-align: center;
 }
@@ -153,51 +144,9 @@ footer, header {
   }
 }
 
-footer {
-  margin-top: 60px;
-  height: 150px;
-  background: rgba(33, 33, 51, 1);
-  color:white;
-}
-
 header {
   position: fixed;
   z-index: 1000;
-}
-
-input[type=text].search {
-  background: ghostwhite url(http://www.freeiconspng.com/uploads/search-icon-png-18.png) 62px 9px;
-  font-weight:400;
-  background-size: 10px 10px;
-  font-size: 12px;
-  display:block;
-  margin: 0;
-  width: 200px;
-  box-sizing: border-box;
-  border: 1px solid #e5e5e5;
-  border-radius: 14px;
-  color: black;
-  height: 28px;
-  left:30px;
-  background-repeat: no-repeat;
-  padding-top: 1px;
-  padding-left: 80px;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-
-  &::-webkit-input-placeholder {
-    color: #aaaaaa;
-  }
-  &:focus {
-      background: white url(http://www.freeiconspng.com/uploads/search-icon-png-18.png) 5% 9px;
-      background-size: 10px 10px;
-      background-repeat: no-repeat;
-      padding-top: 1px;
-      padding-left: 26px;
-  }
 }
 
 form.sessionForm {
@@ -206,7 +155,7 @@ form.sessionForm {
   input, button {
 
     margin: 5px 0;
-    height: 40px;
+    height: 140px;
     width: 100%;
     border: 1px solid #e5e5e5;
     border-radius: 24px;
@@ -236,17 +185,19 @@ form.sessionForm {
   }
 
   div.addImage {
-    margin-top: 10px;
+    margin-top: 150px;
+    margin-bottom: 100px;
     label {
       border-radius: 24px;
       width: 100%;
       font-size: 14px;
+      line-height: 20px;
       margin-top: 100px;
       font-weight: 600;
       border: 1px solid #D6EDFF;
       background: #D6EDFF;
       display: inline-block;
-      padding: 10px 0px;
+      padding: 60px 0px;
       text-align: center;
       cursor: pointer;
       color:black;
@@ -257,27 +208,6 @@ form.sessionForm {
     }
     input[type="file"] {
     display: none;
-}
-    textarea {
-      background: ghostwhite;
-      font-size: 13px;
-      border: 1px solid #dbdbdb;
-      border-radius: 20px;
-      text-align: center;
-      // padding-left: 10px;
-      padding-top: 10px;
-      width:100%;
-      height: 40px;
-      resize: none;
-      margin-bottom: 10px;
-      &::-webkit-input-placeholder {
-        color:    grey;
-        font-size: 14px;
-      }
-      &:focus {
-        background: white;
-        //border: 1px solid black;
-      }
     }
   }
 }
@@ -304,260 +234,6 @@ a.sessionLink {
   }
 }
 
-a.facebook {
-  margin-top: 50px;
-  background: #3626A7;
-  color:white;
-  font-weight: 600;
-  border-color:  #3626A7;
-  &:hover {
-    opacity: 0.9;
-  }
-}
-p.sessionLink {
-  display:block;
-  width: 500px;
-  margin: 30px auto;
-  line-height: 30px;
-  margin-top: 50px;
-
-  span {
-    margin: 0 auto;
-    display:block;
-    background: white;
-    font-size: 12px;
-    width: 70px;
-  }
-  &::before {
-    margin-bottom: -15px;
-    content: "";
-    display:block;
-    width: 500px;
-    height: 1px;
-    background: #e5e5e5;
-  }
-}
-
-p.otherSession {
-  display:block;
-  font-size: 14px;
-  color: black;
-  margin: 30px auto;
-  width: 500px;
-  line-height: 30px;
-  a {
-    font-size: inherit;
-    color: grey;
-    margin-left: 10px;
-  }
-}
-
-
-
-
-//grid
-
-//-------------------------------------------------------------------------
-
-
-.grid {
-  margin-top: 50px;
-  //background: ghostwhite;
-  padding-left: 0.66%;
-  &:after {
-  content: '';
-  display: block;
-  clear: both;
-  }
-}
-
-.grid-sizer {
-  width: 33.333%;
-  background:red;
-
-}
-.grid-item {
-  float: left;
-  width: 32.333%;
-  margin: 0.5% 0px;
-  position: relative;
-  a {
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    display: block;
-    background: rgba(16, 114, 233, 0.1);
-    //color: rgba(16, 114, 233, 0.0);
-    color: white;
-    transition: 0.3s ease;
-    border-radius: 12px;
-
-    // box-shadow: 0px #ccc;
-    p {
-      position: absolute;
-      top:49%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      width: 150px;
-      padding: 8px 9px;
-      font-weight: 600;
-      //height: 10px;
-      //border: 1px solid white;
-      border-radius: 10px;
-      line-height: 100%;
-      font-size: 15px;
-      //text-transform: uppercase;
-      transition: 0.3s ease-in-out;
-      // display:block;
-      color: inherit;
-      // background: rgba(16, 114, 233, 0.0);
-      // z-index: 80;
-      // opacity: 0.2;
-    }
-    &:hover{
-        background: rgba(33, 33, 51, 0.5);
-        //background: rgba(16, 114, 233, 0.3);
-        p {
-          opacity: 1;
-        }
-      //box-shadow: 6px #ccc;
-
-    }
-
-  }
-}
-.grid-item img {
-  position: relative;
-  display: block;
-  width: 100%;
-  border-radius: 12px;
-}
-
-
-
-
-
-
-h1 {
-  font-size: 28px;
-}
-
-
-form.delete {
-  position: absolute;
-  z-index: 2;
-  top: 10px;
-  left: 10px;
-  //margin-top: -25px;
-  //margin-right: -65px;
-  button {
-    border-radius: 4px;
-    background:white;
-    opacity: 0.5;
-    border: none;
-    height:35px;
-    width:35px;
-    transition: all .07s ease-in-out;
-    div {
-    background: rgb(132, 220, 198);
-    height: 35px;
-    position: relative;
-    width: 4px;
-    left: 15px;
-    top: 0px;
-    transform: rotate(45deg);
-      &:after {
-      background: rgb(132, 220, 198);
-      content: "";
-      height: 4px;
-      left: -16px;
-      position: absolute;
-      top: 15px;
-      width: 35px;
-      }
-    }
-    &:hover {
-      //background: none;
-      opacity: 1;
-      color: black;
-      cursor: pointer;
-    }
-  }
-}
-
-
-
-.feed {
-  display: block;
-  width: 90%;
-  margin: 0 auto;
-  //background: ghostwhite;
-  overflow: visible;
-  padding-bottom: 100px;
-  padding-top: 70px;
-  p {
-    font-size: 20px;
-    color: black;
-  }
-}
-
-//// ------------ SHOW PAGE -----------
-section.recipe-image {
-  margin: 0 auto;
-  margin-top: -30px;
-  margin-bottom: 50px;
-  position: relative;
-  display:block;
-  width: 70%;
-  height: 100%;
-  overflow: visible;
-  clear: both;
-  div.image {
-    position: relative;
-    width: auto;
-    height: 100%;
-    display: block;
-    // overflow: hidden;
-    margin: 0 auto;
-    img {
-      margin: 0 auto;
-      display: block;
-      width: auto;
-      max-width:  100%;
-      height: 100%;
-      max-height: 500px;
-      border-radius: 15px;
-    }
-  }
-  div.text {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: block;
-    margin-left: 0%;
-    border-radius: 10px;
-
-    p {
-      span {
-        font-weight: 600;
-        font-size: 16px;
-      }
-      margin: 0 auto;
-      background: ghostwhite;
-      position: relative;
-      font-size: 16px;
-      line-height: 100px;
-      width: 100%;
-      margin-top: 10px;
-      border-radius: 15px;
-    }
-  }
-}
-
-
 h5.showpage {
   font-size: 22px;
   padding: 10px;
@@ -565,80 +241,54 @@ h5.showpage {
   margin: 20px 0;
 }
 
+p {
+  font-size: 14px;
+}
 
-
-
-
-
-
-
-section.returned-recipes {
-  border-radius: 10px;
-  position: relative;
-  display:table;
-  background: ghostwhite;
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-  clear: both;
-  overflow: hidden;
-
-  div.text {
-    display: table-cell;
-    vertical-align: middle;
-    width: 65%;
-    height: 100%;
-
-    // float: left;
-    overflow: hidden;
-    position: relative;
-    // transform: translateY(-50%);
-    p {
-      font-size: 14px;
-      line-height: 30px;
-      color: black;
-      a {
-        font-size: 14px;
-        color: blue;
-        &:hover {
-          opacity: 0.5;
-        }
-      }
-    }
-    p:first-child {
-      line-height: 40px;
-      font-size: 16px;
-      font-weight: 600;
-    }
-  }
-  div.image {
-    display:inline-block;
+div.demographic {
+  width: 70%;
+  text-align: center;
+  display: block;
+  margin: 20px auto;
+  div {
+    border-radius: 20px;
+    text-align: center;
+    font-size: 17px;
+    color: black;
+    text-transform: uppercase;
+    display: block;
+    line-height: 80px;
     width: 100%;
-    float: right;
-    img {
-      border-radius: 10px;
-      display:block;
-      width: 100%;
-      height: auto;
+    background: #f7f7f7;
+    span {
+      font-size: 17px;
+      font-weight: bold;
     }
   }
 }
-//<img src="<%= image.src %>" alt="<%= image.caption %>">
 
 
-// <section class="recipe-image">
-//   <div class="image">
-//   </div>
-//   <div class="text">
-//     <h5>Ingredients</h5>
-//     <p>
-//       <% image.ingredients.forEach((ingredient) => { %>
-//          <br> <%= ingredient %>
-//       <% }) %>
-//     </p>
-//   </div>
-// </section>
+h3.age {
+  text-transform: uppercase;
+  margin: 10px 0px;
+  margin-top: 40px;
+  font-size: 15px;
+  font-weight: bold;
+}
 
-// <p><%= recipe.title %> </p>
-//  <p> By: <%= recipe.publisher %></p>
-// <p><a href="<%= recipe.image_url %>">Link To Recipe </a> </p
+
+a.backbutton {
+  border-radius: 24px;
+  width: 50%;
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 20px;
+  font-weight: 600;
+  border: 1px solid #D6EDFF;
+  background: #D6EDFF;
+  display: inline-block;
+  padding: 30px 0px;
+  text-align: center;
+  cursor: pointer;
+  color:black;
+}
