--- a/views/images/show.ejs
+++ b/views/images/show.ejs
@@ -1,3 +1,17 @@
+
+<div class="feed">
+
+  <% image.ingredients.forEach((ingredient) => { %>
+     <%= ingredient%>
+  <% }) %>
+
+</div>
+
+
+
+
+
+
 <div class="feed">
   <section class="recipe-image">
     <div class="image">
@@ -14,6 +28,11 @@
       </p>
     </div>
   </section>
+
+
+
+
+
 
   <h5 class="showpage">Related Recipes</h5>
 
