--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,27 +1,18 @@
-<%# <div class="logo">
-  <img src="https://vectr.com/tmp/b3qyZo5E7/bGJMtoV6p.png?width=100&height=100&select=bGJMtoV6ppage0" alt="logo">
-</div>%>
 
 <section class="landing-page">
-  <h2>Lazy Recipes</h2>
-  <h3><br> Upload an image and let Lazy Recipes find you a dish using image recognition technology. <br><br> You still have to cook it though...  you lazy bugger. </h3>
-
-  <h5>Made with &hearts; by Roman at GA London 2017</h5>
+  <h2>Specsavers Image Recognition</h2>
+  <h3> Upload an image and let the app find your ideal pair of glasses using Image Recognition.
 </section>
 
 
-<div class="feed">
-
-  <div class="grid">
-    <div class="grid-sizer"></div>
-    <% images.forEach((image, index) => {  %>
-    <div class="grid-item">
-      <img src="<%= image.src %>" alt="<%= image.caption %>">
-      <a href="/images/<%= image.id %>" >
-        <p>View Recipe </p>
-      </a>
-    </div>
-    <% }) %>
+<form class="sessionForm" method="POST" action="/" enctype="multipart/form-data">
+  <div class="addImage">
+    <label for="filename" placeholder="Add Image"> Take Photo</label>
+    <input type="file" name="filename" id="filename" capture="camera">
+    <%# <input class="camera" type="file" accept="image/*" capture="camera">%>
   </div>
-
-</div>
+  <div class="addImage">
+    <textarea style="display:none" name="caption" id="caption"  value="caption" placeholder="Add Caption"></textarea>
+  </div>
+  <button>Run Image Recognition </button>
+</form>
