--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -267,6 +267,50 @@ div.demographic {
   }
 }
 
+div#details {
+  margin-top: 15px;
+  border-top: 3px solid #D6EDFF;
+  display: none;
+  width: 100%;
+  div.left, div.right {
+    display: inline-block;
+    background: grey;
+    margin: 0;
+    width: 30%;
+    float: left;
+    background: ghostwhite;
+    div.case {
+      width: 90%;
+      margin: 0px 5%;
+      font-size: 13px;
+      line-height: 20px;
+      font-weight: bold;
+      display: block;
+      font-weight: bold;
+      span{
+        font-weight: normal;
+        margin-bottom: 25px;
+      }
+    }
+
+  }
+  div.left {
+    // text-align: right;
+    margin-left: 20%;
+    div.case{
+      // text-align: right;
+    }
+  }
+  div.right {
+    margin-right: 20%;
+    // text-align: left;
+    div.case {
+      // text-align: left;
+    }
+  }
+}
+
+
 
 h3.age {
   text-transform: uppercase;
@@ -284,7 +328,6 @@ a.backbutton {
   line-height: 20px;
   margin-top: 20px;
   font-weight: 600;
-  border: 1px solid #D6EDFF;
   background: #D6EDFF;
   display: inline-block;
   padding: 30px 0px;
