--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Lazy Recipes</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
